syntax = "proto3";
option java_multiple_files = true;
package com.arorasagar.cache.messages;

service CacheServer {
  rpc get(GetRequest) returns (GetResponse) {}

  rpc put(PutRequest) returns (PutResponse) {}

  rpc CreateKeySpace(CreateKeySpaceRequest) returns (CreateKeySpaceResponse) {}
}

message GetRequest {
   string key = 1;
}

message GetResponse {
   string val = 1;
}

message PutRequest {
   string key = 1;
   string val = 2;
}

message PutResponse {
  string key = 1;
}

message CreateKeySpaceRequest {
  string name = 1;
}

message CreateKeySpaceResponse {
  string name = 1;
}